--- a/_config.staging.yml
+++ b/_config.staging.yml
@@ -5,3 +5,5 @@ assets:
   baseurl: //dev-www.chapman.edu/_assets/
   js_compressor: uglifier
   css_compressor: sass
+  debug:          false
+  cachebust:      hard
