--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,11 @@ assets:
     - ../src/fonts
   js_compressor:  ~
   css_compressor: none
-  cachebust:      hard
+  cachebust:      none
   cache:          true
   gzip:           [ text/css, application/javascript ]
   version:        1
+  debug:          true
 
 # Custom Variables
 title:            Cascade Assets
