--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,32 @@ dist
 docs/.sass-cache
 docs/.jekyll-assets-cache
 docs/sandbox.html
+
+# Ignore bundler config.
+/.bundle
+
+# Ignore the default SQLite database.
+/db/*.sqlite3
+/db/*.sqlite3-journal
+
+# Ignore all logfiles and tempfiles.
+/log/*.log
+
+# Ignore rvm config
+/.ruby-gemset
+/.ruby-version
+
+# Ignore the redis database
+/*.rdb
+
+/tmp
+
+# Ignore .DS_Store files
+/*.DS_Store
+
+node_modules
+*.codekit
+
+db/data.yml
+
+npm-debug.log
