Changed event widget button placement and made mobile.
The button is now not displayed at all in this widget.

--- a/bin/build
+++ b/bin/build
@@ -1,8 +1,8 @@
 #!/bin/bash
 #staging
-rake do_precompile RAILS_ENV=staging
-rake build RAILS_ENV=staging
+bundle exec rake do_precompile RAILS_ENV=staging
+bundle exec rake build RAILS_ENV=staging
 
 #production
-rake do_precompile RAILS_ENV=production
-rake build RAILS_ENV=production
+bundle exec rake do_precompile RAILS_ENV=production
+bundle exec rake build RAILS_ENV=production
