Sample home page feature test no longer skipped.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -17,7 +17,7 @@ Metrics/LineLength:
 
 # Too short methods lead to extraction of single-use methods, which can make
 # the code easier to read (by naming things), but can also clutter the class
-Metrics/MethodLength: 
+Metrics/MethodLength:
   Max: 20
 
 # The guiding principle of classes is SRP, SRP can't be accurately measured by LoC
@@ -31,7 +31,7 @@ Style/SpaceAroundEqualsInParameterDefault:
 
 # Do not enforce string literals.
 Style/StringLiterals:
-  Enabled: false 
+  Enabled: false
 
 # We do not need to support Ruby 1.9, so this is good to use.
 Style/SymbolArray:
@@ -51,9 +51,9 @@ Style/HashSyntax:
 #Style/DeprecatedHashMethods:
 #  Enabled: false
 
-# String#% is by far the least verbose and only object oriented variant.
-Style/FormatString:
-  EnforcedStyle: percent
+# Options: format, sprintf, percent
+#Style/FormatString:
+#  EnforcedStyle: false
 
 Style/CollectionMethods:
   Enabled: true
@@ -70,7 +70,7 @@ Lint/AssignmentInCondition:
   AllowSafeAssignment: false
 
 # A specialized exception class will take one or more arguments and construct the message from it.
-# So both variants make sense. 
+# So both variants make sense.
 Style/RaiseArgs:
   Enabled: false
 
@@ -128,11 +128,11 @@ Lint/ShadowingOuterLocalVariable:
 
 # Check with yard instead.
 Style/Documentation:
-  Enabled: false 
+  Enabled: false
 
 # This is just silly. Calling the argument `other` in all cases makes no sense.
 Style/OpMethod:
-  Enabled: false 
+  Enabled: false
 
 # There are valid cases, for example debugging Cucumber steps,
 # also they'll fail CI anyway
