--- a/subprojects/degrees-and-programs/source/static/brei-config.json
+++ b/subprojects/degrees-and-programs/source/static/brei-config.json
@@ -1,6 +1,6 @@
 {
 	"generatorVersion": "3.1.1",
-	"deploy": "../../web",
+	"deploy": "../../build",
 	"name": "chapman",
 	"version": "0.0.1",
 	"debug": "false"
