--- a/subprojects/campus-map/source/static/package.json
+++ b/subprojects/campus-map/source/static/package.json
@@ -11,7 +11,7 @@
     "grunt-contrib-concat": "~0.5.0",
     "grunt-contrib-uglify": "~0.6.0",
     "grunt-contrib-compass": "~1.0.1",
-    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-jshint": "*",
     "grunt-contrib-cssmin": "~0.10.0",
     "grunt-contrib-connect": "~0.9.0",
     "grunt-contrib-clean": "~0.6.0",
