Fixes rubocop violations in tests.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,6 +11,10 @@ AllCops:
 Rails:
   Enabled: true
 
+# Rails 5 Only
+Rails/HttpPositionalArguments:
+  Enabled: false
+
 # Commonly used screens these days easily fit more than 80 characters.
 Metrics/LineLength:
   Max: 100
